fix CSS validation : restaurant CSS : white-space instead of text-wrap for restaurants titles

--- a/assets/css/style_restaurants.css
+++ b/assets/css/style_restaurants.css
@@ -535,7 +535,7 @@ html, body {
 }
 .restaurant-menu__title-restaurant {
   margin-right: 8px;
-  text-wrap: nowrap;
+  white-space: nowrap;
 }
 .restaurant-menu__like {
   flex-shrink: 0;
