--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -87,7 +87,7 @@
 
     &__title-restaurant {
         margin-right: 8px;
-        text-wrap: nowrap;
+        white-space: nowrap;
     }
 
     &__like {
